#4: Feature/Attribute table (http://github.com/Polymap4/polymap4-p4/issues/issue/4)
  - NEW: MdToggleItem, MdRadioItem
  - toolbar2: light gray background
  - scrollbars: action-bg, 3 - 5px width
  - SvgImageRegistryHelper: fix concurrent creation of SVGs

--- a/plugins/org.polymap.rhei.batik/resources/css/md/md-standard.css
+++ b/plugins/org.polymap.rhei.batik/resources/css/md/md-standard.css
@@ -2280,13 +2280,15 @@ ScrollBar {
   background-image: none;
   border: none;
   border-radius: 0;
-  width: 3px;
+  width: 5px;
 }
 
 /* line 11, ../../sass/md/_scrollbar.scss */
 ScrollBar-Thumb {
-  background-color: #d8d8d8;
-  border: 1px solid #e8e8e8;
+  background-color: #84b8ea;
+  /*#d8d8d8;*/
+  border: none;
+  /*1px solid #e8e8e8;*/
   border-radius: 15px;
   /*background-image: url( resource/widget/rap/scrollbar/scrollbar-background.png );*/
   min-height: 20px;
@@ -2594,10 +2596,10 @@ FileUpload-FocusIndicator {
 /** MdToolbar2 */
 /* line 9, ../../sass/md/_toolbar2.scss */
 Composite.toolbar2 {
-  color: #ffffff;
-  background-color: #64686F;
-  /*$header-bg;*/
-  box-shadow: 0px -1px 2px #b0b0b0;
+  color: #4a4a4a;
+  background-color: #f3f3f3;
+  /*#64686F;  /*$header-bg;*/
+  box-shadow: 0px -1px 3px #b0b0b0;
   border-radius: 2px;
   padding: 0px;
   spacing: 0;
@@ -2607,13 +2609,33 @@ Composite.toolbar2 {
 }
 
 /* line 21, ../../sass/md/_toolbar2.scss */
-Button[PUSH].toolbar2-item {
-  color: #ffffff;
+Button[PUSH].toolbar2-item,
+Button[TOGGLE].toolbar2-item {
+  color: inherit;
   background-color: inherit;
   box-shadow: none;
   border-radius: 2px;
   background-image: none;
   border: none;
+}
+
+/* line 31, ../../sass/md/_toolbar2.scss */
+Button[PUSH].toolbar2-item:hover,
+Button[TOGGLE].toolbar2-item:hover,
+Button[TOGGLE].toolbar2-item:selected:hover {
+  color: #ffffff;
+  background-color: #84b8ea;
+}
+
+/* line 38, ../../sass/md/_toolbar2.scss */
+Button[PUSH].toolbar2-item:pressed {
+  background-color: #599FE2;
+}
+
+/* line 42, ../../sass/md/_toolbar2.scss */
+Button[TOGGLE].toolbar2-item:selected {
+  color: #4a4a4a;
+  background-color: #dadada;
 }
 
 /* Combo default theme */
