--- a/plugins/org.polymap.rhei.batik/resources/sass/md/_scrollbar.scss
+++ b/plugins/org.polymap.rhei.batik/resources/sass/md/_scrollbar.scss
@@ -5,12 +5,12 @@ ScrollBar {
   background-image: none;
   border: none;
   border-radius: 0;
-  width: 3px;
+  width: 5px;
 }
 
 ScrollBar-Thumb {
-  background-color: #d8d8d8;
-  border: 1px solid #e8e8e8;
+  background-color: lighten( $action-bg, 10% );  /*#d8d8d8;*/
+  border: none;  /*1px solid #e8e8e8;*/
   border-radius: 15px;
   /*background-image: url( resource/widget/rap/scrollbar/scrollbar-background.png );*/
   min-height: 20px;
